--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li>Finn Van Langenaken</li>
           <li>Cas Roggers</li>
           <li>Noah Ceyssens</li>
-          <li>Alexa Achternaam</li>
+          <li>Alexa</li>
           <li>Isra</li>
           <li>Anna</li>
           <li>Maria</li>
