--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li>Ozan Ataf</li>
           <li>Ammadou Bah</li>
           <li>Sam Santermans</li>
-          <li>Finn Van Langenaken</li>
+          <li>Finn Van Loken</li>
           <li>Cas Roggers</li>
           <li>Noah Ceyssens</li>
           <li>Alexa</li>
