de juiste namen

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <h2>De kinderen</h2>
         <ul>
           <li>Otis Wijnants</li>
-          <li>Jayden Buismans</li>
+          <li>Cas Roggen</li>
           <li>Mohammed El Massoudi</li>
           <li>Ozan Ataf</li>
-          <li>Ammadou Bah</li>
-          <li>Sam Santermans</li>
-          <li>Finn Van Loken</li>
-          <li>Cas Roggers</li>
-          <li>Noah Ceyssens</li>
-          <li>Alexa</li>
-          <li>Isra</li>
-          <li>Anna</li>
-          <li>Maria</li>
-          <li>Ayla</li>
-          <li>Dylano Mentens</li>
           <li>Lui Engels</li>
+          <li>Ammadou Bah</li>
+          <li>Jayden Buysmans</li>
+          <li>Noah Ceyssens</li>
+          <li>Dylano Menten</li>
+          <li>Alexa Rievera Raimondi</li>
+          <li>Finn Vanlangenaeker Van Looken</li>
+          <li>Sam Santermans</li>
+          <li>Anna Krasiuk</li>
+          <li>Maria Krasiuk</li>
+          <li>Ayla Bahovic</li>
+          <li>Isra El Baraddoni</li>
         </ul>
       </section>
       <section>
