--- a/index.html
+++ b/index.html
@@ -47,22 +47,27 @@
           <li>
             <h2>Maandag</h2>
             <p>Turnen</p>
+            <p>Kwartiertje lezen</p>
           </li>
           <li>
             <h2>Dinsdag</h2>
             <p>Turnen</p>
+            <p>Kwartiertje lezen</p>
           </li>
           <li>
             <h2>Woensdag</h2>
             <p>Halve dag</p>
+            <p>Kwartiertje lezen</p>
           </li>
           <li>
             <h2>Donderdag</h2>
             <p>Soms karrewiet</p>
+            <p>Kwartiertje lezen</p>
           </li>
           <li>
             <h2>Vrijdag</h2>
             <p>Knutselen</p>
+            <p>Kwartiertje lezen</p>
           </li>
         </ul>
       </section>
